# BeatIt

./: .gitignore  .gitmodules  BACKLOG.md  CMakeLists.txt  DBN_BENCHMARK.md  DBN_CANONICALS.md  DBN_TRACE_MANUCHO.txt  DBN_TRACE_MODERAT.txt  README.md
.github/workflows/: macos.yml
Formula/: beatit.rb
include/beatit/: analysis.h  config.h  coreml.h  coreml_postprocess_dbn.h  coreml_postprocess_dbn_decoded.h  coreml_postprocess_helpers.h  coreml_postprocess_logits.h  coreml_postprocess_result_ops.h  coreml_postprocess_tempo_fit.h  coreml_postprocess_window.h  coreml_preset.h  logging.hpp  postprocess_dbn.h  postprocess_dbn_decoded.h  postprocess_helpers.h  postprocess_logits.h  postprocess_result_ops.h  postprocess_tempo_fit.h  postprocess_window.h  pp_dbn.h  pp_dbn_decode.h  pp_helpers.h  pp_logits.h  pp_result_ops.h  pp_tempo_fit.h  pp_window.h  refiner.h  stream.h  version.h
models/: BeatThis_small0.metadata.json  README.md
models/BeatThis_final0.mlpackage/: Manifest.json
models/BeatThis_small0.mlpackage/: Manifest.json
models/beatit.mlmodelc/: metadata.json  model.mil
models/beatit.mlpackage/: Manifest.json
scripts/: beatthis_dump_downbeats.py  beatthis_export.py  beatthis_export_onnx.py  beatthis_infer.py  beatthis_onnx_to_coreml.py  beattrack_export.py  build_libtorch_universal_mps.sh  build_local.sh  build_release_universal.sh  convert_beatthis_coreml.py  dbn_benchmark.py  export_beatthis.sh  export_coreml.py  generate_test_audio.py  model.py  package_macos_pkg.sh  repro.py  train.py
src/beatit/: activation_merge.cpp  activation_merge.h  analysis.cpp  analysis_backend.cpp  analysis_bpm_activation.cpp  analysis_bpm_beats.cpp  analysis_internal.h  analysis_torch.cpp  analysis_torch_backend.h  analysis_torch_stub.cpp  audio_dsp.cpp  audio_dsp.h  audio_features.cpp  coreml.mm  coreml_inference.mm  coreml_metadata.mm  coreml_model_utils.h  coreml_model_utils.mm  coreml_postprocess.cpp  coreml_postprocess_dbn.cpp  coreml_postprocess_dbn_decoded.cpp  coreml_postprocess_dbn_grid_stages.h  coreml_postprocess_dbn_tempo_decision.cpp  coreml_postprocess_dbn_tempo_decision.h  coreml_postprocess_grid_fill.cpp  coreml_postprocess_helpers.cpp  coreml_postprocess_logits.cpp  coreml_postprocess_result_ops.cpp  coreml_postprocess_tempo_fit.cpp  coreml_postprocess_window.cpp  coreml_preset.cpp  dbn_beatit.cpp  dbn_beatit.h  dbn_calmdad.cpp  dbn_calmdad.h  dbn_calmdad_sparse.cpp  inference_backend.h  inference_backend_coreml.cpp  inference_backend_torch.cpp  inference_backend_torch.h  (+85 more)
src/beatit/analysis/: backend.cpp  bpm_activation.cpp  bpm_beats.cpp  core.cpp  internal.h  torch.cpp  torch_backend.h  torch_loader.mm  torch_stub.cpp
src/beatit/audio/: dsp.cpp  dsp.h  features.cpp  mel_torch.cpp  mel_torch.h  wav.cpp  wav.h
src/beatit/coreml/: preset.cpp
src/beatit/dbn/: beatit.cpp  beatit.h  calmdad.cpp  calmdad.h  calmdad_sparse.cpp
src/beatit/inference/: backend.h  backend_base.cpp  backend_coreml.cpp  backend_coreml_loader.mm  backend_torch.cpp  backend_torch.h  backend_torch_loader.mm  backend_torch_stub.cpp  coreml_loader.mm  coreml_plugin.h  coreml_plugin.mm  coreml_plugin_api.h  torch_plugin.h  torch_plugin.mm  torch_plugin_api.h  window_merge.cpp  window_merge.h
src/beatit/post/: dbn.cpp  dbn.h  dbn_anchor.cpp  dbn_anchor.h  dbn_apply.cpp  dbn_apply.h  dbn_decode.cpp  dbn_decode.h  dbn_grid.cpp  dbn_grid.h  dbn_grid_phase.cpp  dbn_grid_synthesize.cpp  dbn_run.cpp  dbn_run.h  dbn_tempo.cpp  dbn_tempo.h  grid_anchor.cpp  grid_anchor.h  grid_fill.cpp  grid_phase_select.cpp  grid_projection.h  grid_synthesize.cpp  grid_tempo_decision.cpp  grid_tempo_decision.h  helpers.cpp  helpers.h  logits.cpp  logits.h  pipeline.cpp  result_ops.cpp  result_ops.h  tempo_fit.cpp  tempo_fit.h  window.cpp  window.h  window_select.cpp
src/beatit/refiner/: constant.cpp  constant_internal.h  constant_phase.cpp  constant_regions.cpp  constant_support.cpp  core.cpp
src/beatit/runtime/: logging.cpp  version.cpp
src/beatit/sparse/: edge.cpp  edge_adjust.cpp  edge_adjust.h  edge_metrics.cpp  edge_metrics.h  edge_phase.cpp  edge_phase.h  interior_select.cpp  interior_select.h  phase_metrics.cpp  phase_metrics.h  probe.cpp  probe.h  probe_pick.cpp  probe_pick.h  probe_pick_helpers.cpp  probe_pick_internal.h  probe_score.cpp  probe_score.h  refine_common.h  refinement.cpp  refinement.h  usability_scan.cpp  (+3 more)
src/cli/: main.mm
tests/: bazaar_window_alignment_test.mm  beatthis_canonical_test.mm  beatthis_mps_smoke_test.mm  best_window_alignment_test.mm  cli_model_info_test.mm  cli_version_test.mm  coreml_compile_cache_test.mm  coreml_metadata_test.mm  coreml_plugin_load_test.mm  coreml_test_config.h  dbn_decoder_test.cpp  dbn_decoder_test.mm  dbn_grid_stage_test.cpp  dbn_purelove_test.mm  enigma_window_alignment_test.mm  eureka_window_alignment_test.mm  file_drift_probe_test.mm  intelligence_window_alignment_test.mm  lethal_window_alignment_test.mm  manucho_alignment_test.mm  manucho_window_alignment_test.mm  moderat_window_alignment_test.mm  moving_window_alignment_test.mm  neural_window_alignment_test.mm  rhodes_window_alignment_test.mm  samerano_window_alignment_test.mm  sparse_edge_adjust_test.cpp  sparse_edge_phase_test.cpp  sparse_interior_select_test.cpp  sparse_tempo_grid_consistency_test.mm  sparse_usability_scan_test.cpp  streaming_coreml_decoded_audio_test.mm  streaming_coreml_synthetic_test.mm  streaming_ml_mp3_test.mm  streaming_ml_test.mm  street_window_alignment_test.mm  synthetic_audio_test_utils.h  torch_linkage_test.cpp  torch_stream_test.mm  torchscript_model_device_test.py  (+5 more)
tools/: README.md  alignment_inspector.mm  cache_benchmark.mm  probe_runner.mm
training/: README.md  ballroom_dataset.py  beatthis_export.py  beatthis_export_torchscript.py  beatthis_onnx_to_coreml.py  beattrack.md  beattrack_export.py  requirements.txt
training/test_wavs/: README.md  acht.md  bazaar.md  best.md  enigma.md  eureka.md  intelligence.md  lethal.md  manucho.md  moderat.md  moving.md  neural.md  purelove.md  rhodes.md  samerano.md  street.md  test.md  turbo.md  vamp.md  what.md
(+9 files in other folders)
